[94557856] Change chart labels and fix spacing issues

--- a/app/assets/stylesheets/views/public_charts/_teaser_charts.sass
+++ b/app/assets/stylesheets/views/public_charts/_teaser_charts.sass
@@ -2,6 +2,9 @@
   position: relative
   overflow: hidden
 
+  .teaser_chart_title
+    min-height: rem(40)
+
   .icon_bookmark
     position: absolute
     top: rem(-1)
@@ -19,6 +22,4 @@
     color: $white
 
   .provider_data
-    +vertically_center(15%)
     font-size: rem(50)
-
